--- a/pages/blog.html
+++ b/pages/blog.html
@@ -72,9 +72,31 @@
         /* Hero */
         .blog-hero {
             padding: 8rem 2rem 4rem;
-            background: linear-gradient(135deg, var(--primary-teal) 0%, var(--primary-teal-light) 100%);
+            position: relative;
             color: white;
             text-align: center;
+            overflow: hidden;
+        }
+
+        .blog-hero-video {
+            position: absolute;
+            top: 0; left: 0;
+            width: 100%; height: 100%;
+            object-fit: cover;
+            z-index: 1;
+        }
+
+        .blog-hero-overlay {
+            position: absolute;
+            top: 0; left: 0;
+            width: 100%; height: 100%;
+            background: linear-gradient(135deg, rgba(25, 81, 87, 0.85) 0%, rgba(42, 107, 115, 0.8) 100%);
+            z-index: 2;
+        }
+
+        .blog-hero-content {
+            position: relative;
+            z-index: 3;
         }
 
         .blog-hero h1 {
@@ -390,8 +412,14 @@
     </header>
 
     <section class="blog-hero">
-        <h1>UzunYaşa Blog</h1>
-        <p>Sağlık, beslenme ve yaşam tarzı hakkında güncel bilgiler</p>
+        <video class="blog-hero-video" autoplay muted loop playsinline>
+            <source src="../videos/blog-background.mp4" type="video/mp4">
+        </video>
+        <div class="blog-hero-overlay"></div>
+        <div class="blog-hero-content">
+            <h1>UzunYaşa Blog</h1>
+            <p>Sağlık, beslenme ve yaşam tarzı hakkında güncel bilgiler</p>
+        </div>
     </section>
 
     <div class="categories">
