Add 9 guide pages with content (3 full + 6 placeholders)

--- a/pages/rehberler.html
+++ b/pages/rehberler.html
@@ -575,7 +575,7 @@
 
         <!-- Guides Grid -->
         <div class="guides-grid">
-            <a href="#" class="guide-card">
+            <a href="rehberler/kalori-acigi.html" class="guide-card">
                 <div class="guide-thumbnail" style="background-image: url('https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?w=600&q=80');">
                     <span class="guide-category-badge">Kilo Yönetimi</span>
                     <h3>Kalori Açığı Oluşturma Rehberi</h3>
@@ -592,7 +592,7 @@
                 </div>
             </a>
 
-            <a href="#" class="guide-card">
+            <a href="rehberler/akdeniz-diyeti.html" class="guide-card">
                 <div class="guide-thumbnail" style="background-image: url('https://images.unsplash.com/photo-1498837167922-ddd27525d352?w=600&q=80');">
                     <span class="guide-category-badge">Beslenme</span>
                     <h3>Akdeniz Diyeti Başlangıç Rehberi</h3>
@@ -609,7 +609,7 @@
                 </div>
             </a>
 
-            <a href="#" class="guide-card">
+            <a href="rehberler/evde-egzersiz.html" class="guide-card">
                 <div class="guide-thumbnail" style="background-image: url('https://images.unsplash.com/photo-1517836357463-d25dfeac3438?w=600&q=80');">
                     <span class="guide-category-badge">Egzersiz</span>
                     <h3>Evde Egzersiz Başlangıç Rehberi</h3>
@@ -626,7 +626,7 @@
                 </div>
             </a>
 
-            <a href="#" class="guide-card">
+            <a href="rehberler/tip2-diyabet.html" class="guide-card">
                 <div class="guide-thumbnail" style="background-image: url('https://images.unsplash.com/photo-1579684385127-1ef15d508118?w=600&q=80');">
                     <span class="guide-category-badge">Kronik Hastalıklar</span>
                     <h3>Tip 2 Diyabet Önleme Rehberi</h3>
@@ -643,7 +643,7 @@
                 </div>
             </a>
 
-            <a href="#" class="guide-card">
+            <a href="rehberler/uyku-kalitesi.html" class="guide-card">
                 <div class="guide-thumbnail" style="background-image: url('https://images.unsplash.com/photo-1541781774459-bb2af2f05b55?w=600&q=80');">
                     <span class="guide-category-badge">Zihinsel Sağlık</span>
                     <h3>Uyku Kalitesini Artırma Rehberi</h3>
@@ -660,7 +660,7 @@
                 </div>
             </a>
 
-            <a href="#" class="guide-card">
+            <a href="rehberler/aralikli-oruc.html" class="guide-card">
                 <div class="guide-thumbnail" style="background-image: url('https://images.unsplash.com/photo-1490645935967-10de6ba17061?w=600&q=80');">
                     <span class="guide-category-badge">Beslenme</span>
                     <h3>Aralıklı Oruç Başlangıç Rehberi</h3>
@@ -677,7 +677,7 @@
                 </div>
             </a>
 
-            <a href="#" class="guide-card">
+            <a href="rehberler/plato-kirma.html" class="guide-card">
                 <div class="guide-thumbnail" style="background-image: url('https://images.unsplash.com/photo-1538805060514-97d9cc17730c?w=600&q=80');">
                     <span class="guide-category-badge">Kilo Yönetimi</span>
                     <h3>Plato Kırma Rehberi</h3>
@@ -694,7 +694,7 @@
                 </div>
             </a>
 
-            <a href="#" class="guide-card">
+            <a href="rehberler/kalp-sagligi.html" class="guide-card">
                 <div class="guide-thumbnail" style="background-image: url('https://images.unsplash.com/photo-1505576399279-565b52d4ac71?w=600&q=80');">
                     <span class="guide-category-badge">Kronik Hastalıklar</span>
                     <h3>Kalp Sağlığı Koruma Rehberi</h3>
@@ -711,7 +711,7 @@
                 </div>
             </a>
 
-            <a href="#" class="guide-card">
+            <a href="rehberler/50-yas-egzersiz.html" class="guide-card">
                 <div class="guide-thumbnail" style="background-image: url('https://images.unsplash.com/photo-1571019614242-c5c5dee9f50b?w=600&q=80');">
                     <span class="guide-category-badge">Egzersiz</span>
                     <h3>50 Yaş Üstü Egzersiz Rehberi</h3>
